--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,11 +9,16 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/account"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/account"
         android:supportsRtl="true"
         android:theme="@style/Theme.CarPool"
         tools:targetApi="31">
-
+        <activity
+            android:name=".DriverApp"
+            android:exported="false" />
+        <activity
+            android:name=".CustomerApp"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
